--- a/Workout/res/layout/tab4.xml
+++ b/Workout/res/layout/tab4.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout android:orientation="vertical"
     android:layout_height="fill_parent" 
-    android:layout_width="fill_parent" 
+    android:layout_width="fill_parent"
     android:id="@+id/tab4"
     xmlns:android="http://schemas.android.com/apk/res/android"> 
     
@@ -17,15 +17,16 @@
         android:id="@+id/tab4_gallery"/> 
     
     <TextView android:layout_height="wrap_content"
-         android:layout_width="fill_parent"
-         android:textStyle="italic"
-         android:gravity="center"
-         android:text="@string/gallery_show_intro"
-         android:padding="5dp"/>
+        android:layout_width="fill_parent"
+        android:textStyle="italic"
+        android:gravity="center"
+        android:text="@string/gallery_show_intro"
+        android:padding="5dp"/>
     
-    <ImageView android:layout_height="fill_parent"
-         android:layout_width="fill_parent"
-         android:id="@+id/tab4_picture"
-         android:contentDescription="@string/gallery_picture"/>
+	<ImageView android:layout_height="fill_parent"
+        android:layout_width="fill_parent"
+        android:id="@+id/tab4_picture"
+        android:contentDescription="@string/gallery_picture" 
+		android:layout_marginBottom="15dp"/>
     
 </LinearLayout>
