--- a/Workout/res/layout/tab4.xml
+++ b/Workout/res/layout/tab4.xml
@@ -3,30 +3,23 @@
     android:layout_height="fill_parent" 
     android:layout_width="fill_parent"
     android:id="@+id/tab4"
-    xmlns:android="http://schemas.android.com/apk/res/android"> 
-    
-    <TextView android:layout_height="wrap_content" 
-        android:layout_width="fill_parent" 
-        android:textStyle="bold" 
-        android:gravity="center" 
-        android:text="@string/gallery_select_intro" 
-        android:padding="5dp"/> 
+    xmlns:android="http://schemas.android.com/apk/res/android">
         
     <Gallery android:layout_height="wrap_content" 
         android:layout_width="fill_parent" 
-        android:id="@+id/tab4_gallery"/> 
-    
-    <TextView android:layout_height="wrap_content"
-        android:layout_width="fill_parent"
-        android:textStyle="italic"
-        android:gravity="center"
-        android:text="@string/gallery_show_intro"
-        android:padding="5dp"/>
+        android:id="@+id/tab4_gallery"
+        style="@style/style_whiteBoxRegular"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp" />"
     
 	<ImageView android:layout_height="fill_parent"
         android:layout_width="fill_parent"
         android:id="@+id/tab4_picture"
         android:contentDescription="@string/gallery_picture" 
-		android:layout_marginBottom="15dp"/>
+        style="@style/style_whiteBoxRegular"
+		android:layout_marginTop="10dp" 
+		android:layout_marginBottom="5dp"/>
     
 </LinearLayout>
