Changed some strings, finished code for playing and capturing video.

--- a/Workout/res/layout/tab3.xml
+++ b/Workout/res/layout/tab3.xml
@@ -28,7 +28,7 @@
 	    	android:id="@+id/stats_main"
 	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
-	        android:text="@string/tv_welcomeMessage"
+	        android:text="@string/tv_statsMessage"
 	        style="@style/style_whiteBoxCapsRegular" />	
 	    <LinearLayout 
 	        android:id="@+id/stats_linearOne"
