--- a/Workout/res/layout/tab2.xml
+++ b/Workout/res/layout/tab2.xml
@@ -5,54 +5,34 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
  
-	<TextView
-        android:id="@+id/tv_main1"
+    <LinearLayout 
+        android:id="@+id/tab2_mainLinear"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/tv_welcomeMessage"
-        android:background="#fff"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="0dp"
-        android:padding="10dp" />
+        android:orientation="horizontal" >
+        
+        <TextView
+	        android:id="@+id/tab2_tv1"
+	        android:layout_width="0dp"
+	        android:layout_height="120dp"
+	        android:layout_weight="0.7"
+	        style="@style/style_whiteBoxRegular"
+	        android:gravity="center_vertical|center_horizontal"
+	    	android:textSize="20sp"
+	    	android:text="@string/tv_first"
+	    	android:layout_marginRight="0dp" />
     
-    <TextView
-        android:id="@+id/tv_main2"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/tv_welcomeMessage"
-        android:background="#fff"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="0dp"
-        android:padding="10dp"
-        android:layout_below="@id/tv_main1" />
+	    <TextView 
+	        android:id="@+id/tab2_tv1_aOrB"
+	        android:layout_width="0dp"
+	        android:layout_height="130dp"
+	        android:layout_weight="0.3"
+	        style="@style/style_whiteBoxRegular"
+	        android:gravity="center_vertical|center_horizontal"
+	        android:textSize="30sp"
+	        android:layout_marginLeft="0dp" />
+        
+    </LinearLayout>
     
-    <TextView
-        android:id="@+id/tv_main3"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/tv_welcomeMessage"
-        android:background="#fff"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="0dp"
-        android:padding="10dp"
-        android:layout_below="@id/tv_main2" />
-    <TextView
-        android:id="@+id/tv_main4"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/tv_welcomeMessage"
-        android:background="#fff"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="0dp"
-        android:padding="10dp"
-        android:layout_below="@id/tv_main3" />
- 
+    
 </RelativeLayout>
