Added capture video buttons in LogWorkout

--- a/Workout/res/layout/tab1.xml
+++ b/Workout/res/layout/tab1.xml
@@ -37,11 +37,8 @@
 	    
 	    	<ImageButton
 	    	    android:id="@+id/log_squatsVideo"
-	    	    android:src="@drawable/video"
-	    	    android:layout_toRightOf="@id/log_squats"
-	    	   	android:layout_alignParentRight="true"
-	    	    android:layout_width="wrap_content"
-	    	    android:layout_height="wrap_content"/>
+	    	    android:layout_below="@id/log_main"
+	    	    style="@style/style_videoButton"/>
 	    
 	    <LinearLayout 
 	        android:id="@+id/log_linearOne"
@@ -96,11 +93,8 @@
 	    
 	    	<ImageButton
 	    	    android:id="@+id/log_benchpressVideo"
-	    	    android:src="@drawable/video"
-	    	    android:layout_toRightOf="@id/log_benchPress"
-	    	   	android:layout_alignParentRight="true"
-	    	    android:layout_width="wrap_content"
-	    	    android:layout_height="wrap_content"/>
+	    	    android:layout_below="@id/log_linearOne"
+	    	    style="@style/style_videoButton"/>
 	    
 	    <LinearLayout 
 	        android:id="@+id/log_linearTwo"
@@ -152,11 +146,8 @@
 	    
 	    	<ImageButton
 	    	    android:id="@+id/log_rowingVideo"
-	    	    android:src="@drawable/video"
-	    	    android:layout_toRightOf="@id/log_rowing"
-	    	   	android:layout_alignParentRight="true"
-	    	    android:layout_width="wrap_content"
-	    	    android:layout_height="wrap_content"/>
+	    	    android:layout_below="@id/log_linearTwo"
+	    	    style="@style/style_videoButton"/>
 	    
 	    <LinearLayout 
 	        android:id="@+id/log_linearThree"
@@ -210,11 +201,8 @@
 	  
 	    	<ImageButton
 	    	    android:id="@+id/log_ohpVideo"
-	    	    android:src="@drawable/video"
-	    	    android:layout_toRightOf="@id/log_ohp"
-	    	   	android:layout_alignParentRight="true"
-	    	    android:layout_width="wrap_content"
-	    	    android:layout_height="wrap_content"/>
+	    	    android:layout_below="@id/log_linearThree"
+	    	    style="@style/style_videoButton"/>
 	    
 	    <LinearLayout 
 	        android:id="@+id/log_linearFour"
@@ -267,11 +255,8 @@
 	    
 	    <ImageButton
 	    	android:id="@+id/log_deadliftVideo"
-	    	android:src="@drawable/video"
-	    	android:layout_toRightOf="@id/log_deadlift"
-	    	android:layout_alignParentRight="true"
-	    	android:layout_width="wrap_content"
-	    	android:layout_height="wrap_content"/>
+	    	android:layout_below="@id/log_linearFour"
+	    	style="@style/style_videoButton"/>
 	    
 	    <LinearLayout 
 	        android:id="@+id/log_linearFive"
