--- a/Workout/res/layout/custom_weightincrement_dialog.xml
+++ b/Workout/res/layout/custom_weightincrement_dialog.xml
@@ -6,7 +6,8 @@
     
     <NumberPicker 
         android:id="@+id/cwid_np1"
-		android:layout_width="20dp"
-		android:layout_height="80dp" />
+		android:layout_width="40dp"
+		android:layout_height="80dp"
+		android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
